# MultiApptSimulationsAnalysis

./: .gitignore  pyproject.toml
multiapptsimulationsanalysis/: analysis_test.ipynb  batch_analysis_modality.ipynb  batch_analysis_test.ipynb  batch_sim.py  batch_sim_modality.py  sim_cli.py  sim_test.py
test_data/: simulation_data_0.parquet  simulation_data_1.parquet  simulation_data_2.parquet  simulation_data_3.parquet  simulation_data_4.parquet  summary.parquet
